<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AfroditaNuvies</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="vestitsnuvia">TOTS ELS VESTITS</string>
	<string name="temporades">TEMPORADES</string>
    <string name="prendremides">PRENDRE\'T LES MIDES</string>
    <string name="quisom">QUI SOM</string>
    <string name="dadescontacte">DADES DE CONTACTE</string>
    <string name="title_activity_llistar_temporades">LlistarTemporades</string>
    <string name="title_activity_llista_coleccions">LlistaColeccionsActivity</string>
    <string name="title_activity_mostrar_coleccio">MostrarColeccioActivity</string>
    <string name="btnTancarVestit">Tornar</string>
    <string name="botoMostrarTeixits">Mostrar teixits</string>
    <string name="botoMostrarVestits">Mostrar vestits</string>
    <string name="title_activity_mostrar_teixit">MostrarTeixitActivity</string>
    <string name="carregantTeixits">Carregant Teixits</string>
    <string name="carregantColeccions">Carregant Coleccions</string>
    <string name="carregantTemporades">Carregant Temporades</string>
    <string name="carregantWeb">Carregant Web</string>
    <string name="carregantDades">Carregant Dades</string>
    <string name="carregantImatge">Carregant Imatge</string>
    <string name="carregantVestits">Carregant Vestits</string>
    <string name="title_activity_mostrarinfopersonal">Mostrarinfopersonal</string>
    <string name="title_activity_galeria_de_vestits">Galeria De Vestits</string>
    <string name="title_activity_vestit">Vestit</string>
    <string name="btnMesInfo">+ INFO</string>
    <string name="lblDescripcioVestit">Descripció</string>
    <string name="title_activity_paginador_vestits">Paginador de Vestits</string>
    <string name="btnMides">Següent</string>
    <string name="title_activity_prendre_mides">PrendreMidesActivity</string>
    <string name="descripcioPit">Mentre es porti un sostenidor que vagi bé, passar la cinta al voltant de la part més prominent del pit.</string>
    <string name="descripcioCintura">Es tracta de la mida de la part més estreta de la cintura. S\'ha de moure la cinta métrica fins a trovar la cintura natural, i medir-a un cop localitzada.</string>
    <string name="descripcioMaluc">El contorn del maluc es pren al voltant de la part més prominent dels malucs, entre la cintura i les cames.</string>
    <string name="descripcioAltura">L\'alçada s\'ha de medir des del terra fins a la setena vèrtebra, darrera del coll, com es pot observar a la imatge.</string>
    <string name="midesGuardades">Mides Guardades</string>
	<string name="title_activity_cintura">Mida Cintura</string>
	<string name="title_activity_maluc">Mida Maluc</string>
	<string name="title_activity_altura">Mida Alçada</string>
	<string name="title_activity_pit">Mida Pit</string>
	<string name="title_activity_resum_mides">Resum mides</string>
	<string name="mides">Mides:</string>
	<string name="modificar">Modificar</string>
	<string name="midaPit">Mida Pit: </string>
	<string name="midaCintura">Mida Cintura: </string>
	<string name="midaMaluc">Mida Maluc: </string>
	<string name="midaAltura">Alçada: </string>

</resources>