<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResumMidesActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mides"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:paddingBottom="@dimen/activity_vertical_margin">

         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent" >

             <TableRow
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:id="@+id/tableRow1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/midaPit"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

                 <TextView
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:id="@+id/txtValorPit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

             </TableRow>

             <TableRow
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:id="@+id/tableRow2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/midaCintura"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

                 <TextView
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:id="@+id/txtValorCintura"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

             </TableRow>

             <TableRow
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:id="@+id/tableRow3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/midaMaluc"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

                 <TextView
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:id="@+id/txtValorMaluc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

             </TableRow>

             <TableRow
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:id="@+id/tableRow4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <TextView
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/midaAltura"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

                 <TextView
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:id="@+id/txtValorAltura"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

             </TableRow>
         </TableLayout>

     </LinearLayout>

     <Button
         android:id="@+id/btnModificarMides"
         android:paddingLeft="8dp"
    	 android:paddingRight="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/modificar"
         android:background="@drawable/button_background"
         />

</LinearLayout>