<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/menuPrincipalTemporades"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:paddingLeft="2dp"
    	 		android:paddingRight="2dp"
    	 		android:paddingTop="2dp"
    	 		android:paddingBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/button_background"
                android:src="@drawable/mainmenu_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temporades" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/menuPrincipalVestits"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:paddingLeft="2dp"
    	 		android:paddingRight="2dp"
    	 		android:paddingTop="2dp"
    	 		android:paddingBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/button_background"
                android:src="@drawable/mainmenu_vestits" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/vestitsnuvia" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/menuPrincipalMides"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:paddingLeft="2dp"
    	 		android:paddingRight="2dp"
    	 		android:paddingTop="2dp"
    	 		android:paddingBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/button_background"
                android:src="@drawable/mainmenu_mides" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/prendremides" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/menuPrincipalQuiSom"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:paddingLeft="2dp"
    	 		android:paddingRight="2dp"
    	 		android:paddingTop="2dp"
    	 		android:paddingBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/button_background"
                android:src="@drawable/mainmenu_quisom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/quisom" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/menuPrincipalDades"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:paddingLeft="2dp"
    	 		android:paddingRight="2dp"
    	 		android:paddingTop="2dp"
    	 		android:paddingBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/button_background"
                android:src="@drawable/mainmenu_dades" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dadescontacte" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>